Fixed homepage sizing on mobile displays

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -58,7 +58,222 @@
    }
 
    .icon-follow {
+     width: 10%;
      margin-bottom: 20%;
+   }
+
+   .inner {
+     height: 768px;
+   }
+
+}
+
+@media screen and (max-width: 480px) {
+  #homepage {
+    min-height: 1200px;
+  }
+	.text {
+    font-size: 80%;
+    margin: 5% 10% 5% 10%;
+}
+	.line {
+	max-width: 75%;
+}
+
+  .about-text1 {
+  font-size: 75%;
+  margin: 5% 10% 5% 10%;
+}
+
+   .img-about1 {
+     max-width: 100%;
+   }
+
+   .about-text2 {
+     font-size: 75%;
+     margin: 5% 10% 5% 10%;
+     width: 80%;
+   }
+
+   .img-about2 {
+     max-width: 100%;
+     position: relative;
+   }
+
+   .container {
+     max-width: 100%
+   }
+
+   .icon {
+     max-width:20%;
+   }
+
+   #contact-title {
+     font-size:250%;
+   }
+
+   #about-title {
+     font-size:200%;
+     margin-top: 5%;
+   }
+
+   #form {
+     min-width: 70%;
+     max-width: 80%;
+     margin: auto;
+   }
+
+   #instafeed1 {
+     display: none;
+   }
+
+   .icon-follow {
+     width: 10%;
+     margin-bottom: 20%;
+   }
+
+   .inner {
+     height: 480px;
+   }
+
+}
+
+@media screen and (max-width: 768px) {
+  #homepage {
+    min-height: 1200px;
+  }
+	.text {
+    font-size: 80%;
+    margin: 5% 10% 5% 10%;
+}
+	.line {
+	max-width: 75%;
+}
+
+  .about-text1 {
+  font-size: 75%;
+  margin: 5% 10% 5% 10%;
+}
+
+   .img-about1 {
+     max-width: 100%;
+   }
+
+   .about-text2 {
+     font-size: 75%;
+     margin: 5% 10% 5% 10%;
+     width: 80%;
+   }
+
+   .img-about2 {
+     max-width: 100%;
+     position: relative;
+   }
+
+   .container {
+     max-width: 100%
+   }
+
+   .icon {
+     max-width:20%;
+   }
+
+   #contact-title {
+     font-size:250%;
+   }
+
+   #about-title {
+     font-size:200%;
+     margin-top: 5%;
+   }
+
+   #form {
+     min-width: 70%;
+     max-width: 80%;
+     margin: auto;
+   }
+
+   #instafeed1 {
+     display: none;
+   }
+
+   .icon-follow {
+     width: 10%;
+     margin-bottom: 20%;
+   }
+
+   .inner {
+     height: 768px;
+   }
+
+}
+
+@media screen and (max-width: 640px) {
+  #homepage {
+    min-height: 1200px;
+  }
+	.text {
+    font-size: 80%;
+    margin: 5% 10% 5% 10%;
+}
+	.line {
+	max-width: 75%;
+}
+
+  .about-text1 {
+  font-size: 75%;
+  margin: 5% 10% 5% 10%;
+}
+
+   .img-about1 {
+     max-width: 100%;
+   }
+
+   .about-text2 {
+     font-size: 75%;
+     margin: 5% 10% 5% 10%;
+     width: 80%;
+   }
+
+   .img-about2 {
+     max-width: 100%;
+     position: relative;
+   }
+
+   .container {
+     max-width: 100%
+   }
+
+   .icon {
+     max-width:20%;
+   }
+
+   #contact-title {
+     font-size:250%;
+   }
+
+   #about-title {
+     font-size:200%;
+     margin-top: 5%;
+   }
+
+   #form {
+     min-width: 70%;
+     max-width: 80%;
+     margin: auto;
+   }
+
+   #instafeed1 {
+     display: none;
+   }
+
+   .icon-follow {
+     width: 10%;
+     margin-bottom: 20%;
+   }
+
+   .inner {
+     height: 640px;
    }
 
 }
